dist_man1_MANS=

if BUILD_MIGCOIND
  dist_man1_MANS+=migcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=migcoin-qt.1
endif

if BUILD_MIGCOIN_CLI
  dist_man1_MANS+=migcoin-cli.1
endif

if BUILD_MIGCOIN_TX
  dist_man1_MANS+=migcoin-tx.1
endif

if BUILD_MIGCOIN_UTIL
  dist_man1_MANS+=migcoin-util.1
endif

if ENABLE_WALLET
if BUILD_MIGCOIN_WALLET
  dist_man1_MANS+=migcoin-wallet.1
endif
endif
